--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
+.container {
+    margin: auto;
+    width: 200px;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background: black;
+    border-radius: 20px;
+}
 
-/* 
-
-    You can write your own styles here...
+.redlight {
+    background-color: red;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
     
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
