--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,17 +2,40 @@
     margin: auto;
     width: 200px;
     height: 400px;
-    display: flex;
-    flex-direction: row;
+    text-align: center;
     justify-content: center;
-    background: black;
+    background-color: black;
     border-radius: 20px;
 }
 
-.redlight {
-    background-color: red;
+.lightContainer {
+    margin-top: 30px;
+}
+
+.light {
+    background-color: white;
     border-radius: 50px;
     width: 100px;
     height: 100px;
-    
+    margin: auto;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.redLight {
+    background-color: red;
+}
+
+.yellowLight {
+    background-color: yellow;
+}
+
+.greenLight {
+    background-color: green;
+}
+
+.selected {
+    box-shadow:
+0 0 50px 20px white, 
+0 0 20px 20px white; 
 }
