--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,3 +39,12 @@
 0 0 50px 20px white, 
 0 0 20px 20px white; 
 }
+
+.cycleButton {
+    width: 150px;
+    height: 75px;
+    margin: auto;
+    background-color: blue;
+    border-radius: 10px;
+    margin-top: 30px;
+}
