--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,6 +34,10 @@
     background-color: green;
 }
 
+.purpleLight {
+    background-color: purple;
+}
+
 .selected {
     box-shadow:
 0 0 50px 20px white, 
@@ -45,6 +49,14 @@
     height: 75px;
     margin: auto;
     background-color: blue;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+.purpleButton {
+    width: 150px;
+    height: 75px;
+    margin: auto;
+    background-color: rgb(190, 95, 190);
     border-radius: 10px;
     margin-top: 30px;
 }
